Changed some NPM stuff

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "code",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://c-johnson.github.io/decentralize",
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "node-sass": "^4.5.1",
     "react-scripts": "0.9.5"
   },
@@ -15,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
